# Deskemes

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  README.md
AndroidApp/app/: build.gradle
AndroidApp/app/src/androidTest/java/cz/xoft/deskemes/: ApprovedPeerTest.java  ExampleInstrumentedTest.java
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/java/cz/xoft/deskemes/: AddressBlacklistBeaconFilter.java  ApprovePeerActivity.java  ApprovedPeers.java  ByteArrayReader.java  Connection.java  ConnectionMgr.java  ConnectivityService.java  InitiateConnectionService.java  LocalConnectService.java  MuxChannelInfo.java  MuxChannelSendText.java  MuxChannelZero.java  NetworkChangeNotificationReceiver.java  PacketBuilder.java  ServiceSettings.java  StatusActivity.java  UdpListenerService.java  UdpListenerThread.java  Utils.java
AndroidApp/app/src/main/res/layout/: activity_approve_peer.xml  activity_status.xml
AndroidApp/app/src/main/res/values/: strings.xml
AndroidApp/app/src/test/java/cz/xoft/deskemes/: ByteArrayReaderTest.java  ExampleUnitTest.java  UtilsTest.java
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
DesktopClient/: CMakeLists.txt
DesktopClient/Res/: Deskemes.qrc
DesktopClient/Src/: BackgroundTasks.cpp  ComponentCollection.hpp  DebugLogger.hpp  Device.hpp  Logger.hpp  MultiLogger.cpp  Settings.hpp  StringFormatter.hpp  Utils.cpp  Utils.hpp  main.cpp
DesktopClient/Src/Comm/: AdbCommunicator.cpp  AdbCommunicator.hpp  Connection.hpp  DetectedDevices.cpp  UdpBroadcaster.cpp  UdpBroadcaster.hpp  UsbDeviceEnumerator.cpp  UsbDeviceEnumerator.hpp
DesktopClient/Src/Comm/Channels/: ChannelSmsSend.cpp  ChannelSmsSend.hpp  InfoChannel.cpp
DesktopClient/Src/DB/: Database.cpp  DatabaseUpgrade.cpp  DevicePairings.cpp  DevicePairings.hpp
DesktopClient/Src/UI/: DlgSendText.ui  NewDeviceWizard.cpp  NewDeviceWizard.hpp  WgtDevice.cpp  WgtDevice.hpp  WgtImage.hpp  WndDevices.cpp  WndDevices.hpp  WndDevices.ui
DesktopClient/Src/UI/Pages/: PgDeviceList.hpp  PgDeviceList.ui  PgNeedApp.cpp  PgNeedApp.hpp  PgNeedApp.ui  PgNeedAuth.cpp  PgNeedAuth.hpp  PgPairConfirm.ui  PgPairInit.cpp  PgSucceeded.hpp
DesktopClient/Tests/: DeviceSimulator.lua
DesktopClient/Translations/: Deskemes_cs.ts
DesktopClient/res/: win.rc
DesktopClient/src/: BackgroundTasks.hpp  ComponentCollection.cpp  ComponentCollection.hpp  DebugLogger.cpp  Device.cpp  Device.hpp  DeviceMgr.cpp  DeviceMgr.hpp  Devices.cpp  Devices.hpp  Exception.hpp  InstallConfiguration.cpp  InstallConfiguration.hpp  Logger.cpp  Logger.hpp  MultiLogger.cpp  MultiLogger.hpp  Optional.hpp  Utils.cpp  Utils.hpp  main.cpp
DesktopClient/src/Comm/: AdbAppInstaller.cpp  AdbAppInstaller.hpp  AdbCommunicator.cpp  AdbCommunicator.hpp  Connection.cpp  Connection.hpp  ConnectionMgr.cpp  ConnectionMgr.hpp  DetectedDevices.cpp  DetectedDevices.hpp  PhaseHandlers.cpp  PhaseHandlers.hpp  TcpListener.cpp  TcpListener.hpp  UdpBroadcaster.cpp  UdpBroadcaster.hpp  UsbDeviceEnumerator.cpp  UsbDeviceEnumerator.hpp
DesktopClient/src/Comm/Channels/: ChannelSmsSend.cpp  InfoChannel.cpp  InfoChannel.hpp
DesktopClient/src/DB/: Database.cpp  Database.hpp  DatabaseBackup.cpp  DatabaseBackup.hpp  DatabaseUpgrade.cpp  DatabaseUpgrade.hpp  DeviceBlacklist.cpp  DeviceBlacklist.hpp  DevicePairings.cpp  DevicePairings.hpp
DesktopClient/src/UI/: DetectedDevicesModel.cpp  DetectedDevicesModel.hpp  DlgSendText.cpp  DlgSendText.hpp  NewDeviceWizard.cpp  NewDeviceWizard.hpp  WgtDevice.cpp  WgtDevice.hpp  WgtDevice.ui  WgtImage.cpp  WndDevices.cpp  WndDevices.hpp  WndDevices.ui
DesktopClient/src/UI/Pages/: PgConnectionType.cpp  PgConnectionType.hpp  PgConnectionType.ui  PgDeviceList.cpp  PgDeviceList.ui  PgNeedApp.cpp  PgNeedAuth.cpp  PgNeedAuth.ui  PgPairConfirm.cpp  PgPairConfirm.hpp  PgPairConfirm.ui  PgPairInit.cpp  PgPairInit.hpp  PgPairInit.ui  PgPairingInProgress.cpp  PgPairingInProgress.hpp  PgPairingInProgress.ui  PgSucceeded.cpp  PgSucceeded.ui  PgTcpDeviceList.cpp  PgTcpDeviceList.hpp  PgTcpDeviceList.ui  PgUsbDeviceList.cpp  PgUsbDeviceList.hpp  PgUsbDeviceList.ui
DesktopClient/tests/: DeviceSimulator.lua  SimulatorCert.pem  SimulatorPrivKey.pem  SimulatorPubKey.der
DesktopClient/translations/: Deskemes_cs.ts
DevDocs/: Architecture.md  Channel - Info.md  Channel - SMS send.md  Connection.md
